# Aster-Bridge

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml  verify_release_assets.yml
downloads/: Dockerfile  k8s.yaml  nginx.conf
src/: App.tsx  api.ts  bridge_app.tsx  main.tsx  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  config.rs  conn_limit.rs  diagnostics.rs  error.rs  main.rs  outbox.rs  port_picker.rs  protocol_harness.rs  tls.rs
src-tauri/src/auth/: app_passwords.rs  device_identity.rs  mod.rs  session.rs
src-tauri/src/crypto/: alias.rs  envelope.rs  metadata.rs  mod.rs  preferences.rs  ratchet.rs  vault.rs
src-tauri/src/db/: mod.rs
src-tauri/src/imap/: server.rs
src-tauri/src/jmap/: auth.rs  blob.rs  dispatcher.rs  mime.rs  mod.rs  server.rs  session.rs  sse.rs  state.rs  store.rs  ws.rs
src-tauri/src/jmap/methods/: email.rs  identity.rs  mailbox.rs  mod.rs  snippet.rs  submission.rs  thread.rs
src-tauri/src/pop3/: mod.rs  server.rs
src-tauri/src/smtp/: server.rs
src-tauri/src/sync/: mod.rs  poller.rs
src/i18n/: en.ts  index.ts
src/lib/: font_stacks.ts  material_theme.ts  theme_sync.ts
src/styles/: fonts.css  global.css
