# Aster Communications Inc.
#
# Copyright (c) 2026 Aster Communications Inc.
#
# This file is part of this project.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "aster-bridge-desktop"
version = "0.4.8"
edition = "2021"
description = "Aster Bridge - IMAP/SMTP bridge for Aster Mail"
license = "AGPL-3.0-or-later"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

aster-crypto = { path = "../../Aster-Mail/aster-crypto", default-features = false, features = ["std"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
mail-parser = "0.9"

axum = { version = "0.7", features = ["macros", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
time = "0.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
async-stream = "0.3"
percent-encoding = "2"

ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdh"] }
ml-kem = "0.2"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
hkdf = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
rand = "0.8"
rand_core = "0.6"

keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
whoami = "1"

open = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.23"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
